unpackaged/main/default/objects/CMPL123CME__CVR__c/CMPL123CME__CVR__c.object-meta.xml
<CustomObject>
    <label>CVR</label>
    <nameField>
        <displayFormat>CVR-{0000}</displayFormat>
        <label>CVR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>