unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </CustomField>