unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Age_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_of_Device__c</fullName>
        <description>Age of Device</description>
        <inlineHelpText>Age of Device</inlineHelpText>
        <label>Age of Device</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>