unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Availability_of_device_for_evaluation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Availability_of_device_for_evaluation__c</fullName>
        <description>Availability of device for evaluation</description>
        <inlineHelpText>Availability of device for evaluation</inlineHelpText>
        <label>Availability of device for evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
                <value>
                    <fullName>Returned to Manufacturer/Importer</fullName>
                </value>
                <value>
                    <fullName>Neither(with explanation)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>