unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Complainant_is_a__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Complainant_is_a__c</fullName>
        <description>Complainant is a</description>
        <inlineHelpText>Complainant is a</inlineHelpText>
        <label>Complainant is a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>