unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Control_Lot_Serial_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Control_Lot_Serial_No__c</fullName>
        <description>Control/Lot/Serial No.</description>
        <inlineHelpText>Control/Lot/Serial No.</inlineHelpText>
        <label>Control/Lot/Serial No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>