unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Corrective_Actions_taken__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Corrective_Actions_taken__c</fullName>
        <description>Corrective Actions taken as a result of the investigation</description>
        <inlineHelpText>Corrective Actions taken as a result of the investigation</inlineHelpText>
        <label>Corrective Actions taken after investig.</label>
        <type>TextArea</type>
    </CustomField>