unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Date_of_Incident__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Incident__c</fullName>
        <description>Date of Incident</description>
        <inlineHelpText>Date of Incident</inlineHelpText>
        <label>Date of Incident</label>
        <type>Date</type>
    </CustomField>