unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Date_Submitted__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Submitted__c</fullName>
        <description>Date Submitted</description>
        <inlineHelpText>Date Submitted</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </CustomField>