unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Details_of_Incident__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Details_of_Incident__c</fullName>
        <description>Details of Incident</description>
        <inlineHelpText>Details of Incident</inlineHelpText>
        <label>Details of Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>