unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Device_Classification__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Classification__c</fullName>
        <description>Device Classification</description>
        <inlineHelpText>Device Classification</inlineHelpText>
        <label>Device Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>