unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Device_Identification_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Identification_No__c</fullName>
        <description>Device Identification No</description>
        <inlineHelpText>Device Identification No</inlineHelpText>
        <label>Device Identification No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>