unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Device_License_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_License_No__c</fullName>
        <description>Device License No.</description>
        <inlineHelpText>Device License No.</inlineHelpText>
        <label>Device License No.</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>