unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Did_Importer_Reportred_Incid_to_Manufact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Did_Importer_Reportred_Incid_to_Manufact__c</fullName>
        <description>Did the importer report the incident to the manufacturer?</description>
        <inlineHelpText>Did the importer report the incident to the manufacturer?</inlineHelpText>
        <label>Did Importer Report Incid to Manufact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>