unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Expiration_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <inlineHelpText>Expiration Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </CustomField>