unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Explanation_if_Neither__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explanation_if_Neither__c</fullName>
        <description>If Availability of device for evaluation is Neither, Please give appropriate explanation</description>
        <inlineHelpText>If Availability of device for evaluation is Neither, Please give appropriate explanation</inlineHelpText>
        <label>Explanation if above is neither</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>