unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Health_Canada_File_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_Canada_File_No__c</fullName>
        <description>Health Canada File No. (if applicable)</description>
        <inlineHelpText>Health Canada File No. (if applicable)</inlineHelpText>
        <label>Health Canada File No. (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>