unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__How_long_was_the_device_in_use__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__How_long_was_the_device_in_use__c</fullName>
        <description>How long was the device in use</description>
        <inlineHelpText>How long was the device in use</inlineHelpText>
        <label>How long was the device in use?</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>