unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__How_Many_Days_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__How_Many_Days_Report__c</fullName>
        <description>How Many Days Report</description>
        <inlineHelpText>If the report is a 10 day or 30 day report, based on the seriousness of the incident associated with the medical device</inlineHelpText>
        <label>How Many Days Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10-Day</fullName>
                </value>
                <value>
                    <fullName>30-Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>