unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__If_neither_give_explanation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_neither_give_explanation__c</fullName>
        <description>If Availability of device for evaluation is neither give explanation</description>
        <inlineHelpText>If Availability of device for evaluation is neither give explanation</inlineHelpText>
        <label>If neither give explanation</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>