unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__If_Preliminary_final_report_date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_Preliminary_final_report_date__c</fullName>
        <description>If “preliminary” only, anticipated date for the final report</description>
        <inlineHelpText>If “preliminary” only, anticipated date for the final report</inlineHelpText>
        <label>If Preliminary, Expected Final Rpt Date</label>
        <type>Date</type>
    </CustomField>