unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__If_Update_Final_Previous_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_Update_Final_Previous_Date__c</fullName>
        <description>If “update/final”, date the previous report was submitted to Health Canada:</description>
        <inlineHelpText>If “update/final”, date the previous report was submitted to Health Canada</inlineHelpText>
        <label>If 'Update/final', Previous Report Date</label>
        <type>Date</type>
    </CustomField>