unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Importer_Establishment_Licence_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Importer_Establishment_Licence_Number__c</fullName>
        <description>Importer Establishment Licence Number</description>
        <inlineHelpText>Importer : Establishment License Number
(if applicable)</inlineHelpText>
        <label>Importer Establishment Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>