unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Importer_Health_Canada_ID_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Importer_Health_Canada_ID_No__c</fullName>
        <description>Health Canada assigned
company identification number
(if known)</description>
        <inlineHelpText>Importer : Health Canada assigned
company identification number
(if known)</inlineHelpText>
        <label>Importer Health Canada ID No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>