unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Importer_Name_and_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Importer_Name_and_Address__c</fullName>
        <description>Importer Name and Address</description>
        <inlineHelpText>Importer Name and Address</inlineHelpText>
        <label>Importer Name and Address</label>
        <type>TextArea</type>
    </CustomField>