unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Incident_Occurred_During__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Incident_Occurred_During__c</fullName>
        <description>Incident Occurred During</description>
        <inlineHelpText>Incident Occurred During</inlineHelpText>
        <label>Incident Occurred During</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigational testing</fullName>
                </value>
                <value>
                    <fullName>Special Access Program</fullName>
                </value>
                <value>
                    <fullName>Radiation emitting device (if applicable)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>