unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Investigative_Actions_and_Timeline__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigative_Actions_and_Timeline__c</fullName>
        <description>Investigative Actions and Timeline</description>
        <inlineHelpText>Investigative Actions and Timeline</inlineHelpText>
        <label>Investigative Actions and Timeline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>