unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Is_Importer_Submitting_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Is_Importer_Submitting_Report__c</fullName>
        <description>Is the importer also submitting the report on behalf of the manufacturer ?</description>
        <inlineHelpText>Is the importer also submitting the report on behalf of the manufacturer ?</inlineHelpText>
        <label>Is Importer Submitting Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>