unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Manufacturer_Establishment_License__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Establishment_License__c</fullName>
        <description>Manufacturer Establishment License Number(if applicable)</description>
        <inlineHelpText>Manufacturer Establishment License Number(if applicable)</inlineHelpText>
        <label>Manufacturer Establishment License #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>