unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Manufacturer_Health_Canada_Id_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Health_Canada_Id_No__c</fullName>
        <description>. Health Canada assigned
company identification number
(if known)</description>
        <inlineHelpText>Health Canada assigned
company identification number
(if known)</inlineHelpText>
        <label>Manufacturer Health Canada Id No.</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>