unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Manufacturer_Medical_Device_Identifier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Medical_Device_Identifier__c</fullName>
        <description>Manufacturer’s Medical Device Identifier</description>
        <inlineHelpText>Manufacturer’s Medical Device Identifier</inlineHelpText>
        <label>Manufacturer’s Medical Device Identifier</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>