unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Manufacturer_Name_and_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Name_and_Address__c</fullName>
        <description>Manufacturer Name and Address</description>
        <inlineHelpText>Manufacturer Name and Address</inlineHelpText>
        <label>Manufacturer Name and Address</label>
        <type>TextArea</type>
    </CustomField>