unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Name_of_Complainant__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Name_of_Complainant__c</fullName>
        <description>Name of Complainant</description>
        <inlineHelpText>Name of Complainant</inlineHelpText>
        <label>Name of Complainant</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>