unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Name_of_Health_Care_Facility__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Name_of_Health_Care_Facility__c</fullName>
        <description>Name of Health Care Facility (if applicable)</description>
        <inlineHelpText>Name of Health Care Facility (if applic)</inlineHelpText>
        <label>Name of Health Care Facility (if applic)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>