unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Patient_Consequences__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Consequences__c</fullName>
        <description>Patient Consequences</description>
        <inlineHelpText>Patient Consequences</inlineHelpText>
        <label>Patient Consequences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>