unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Related_Complaint__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complaint</description>
        <inlineHelpText>Complaint</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>CVR</relationshipLabel>
        <relationshipName>CVR_Complaint</relationshipName>
        <type>Lookup</type>
    </CustomField>