unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Reporter_Awareness_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_Awareness_Date__c</fullName>
        <description>Reporter’s Awareness Date</description>
        <inlineHelpText>Reporter’s Awareness Date</inlineHelpText>
        <label>Reporter’s Awareness Date</label>
        <type>Date</type>
    </CustomField>