unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Reporter_Contact_Information__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_Contact_Information__c</fullName>
        <description>Reporter Contact Information</description>
        <inlineHelpText>Reporter Contact Information</inlineHelpText>
        <label>Reporter Contact Information</label>
        <type>TextArea</type>
    </CustomField>