unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Reporter_File_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_File_No__c</fullName>
        <description>Reporter File No.</description>
        <inlineHelpText>Reporter File No.</inlineHelpText>
        <label>Reporter File No.</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>