unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Reporter_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_Type__c</fullName>
        <description>Reporter Type</description>
        <inlineHelpText>Reporter Type</inlineHelpText>
        <label>Reporter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>