unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Root_Cause_of_Problem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Root_Cause_of_Problem__c</fullName>
        <description>Root Cause of Problem</description>
        <inlineHelpText>Root Cause of Problem</inlineHelpText>
        <label>Root Cause of Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>