unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Software_Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Software_Version__c</fullName>
        <description>Software Version</description>
        <inlineHelpText>Software Version</inlineHelpText>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>