unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Telephone_No_Email_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Telephone_No_Email_Address__c</fullName>
        <description>Telephone No./Email Address</description>
        <inlineHelpText>Telephone No./Email Address</inlineHelpText>
        <label>Telephone No./Email Address</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>