unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Trade_Brand_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Trade_Brand_Name__c</fullName>
        <description>Trade/Brand Name</description>
        <inlineHelpText>Trade/Brand Name</inlineHelpText>
        <label>Trade/Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>