unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Type_of_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <description>Type of Report</description>
        <inlineHelpText>Type of Report</inlineHelpText>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Preliminary and Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>