unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Was_the_device_labelled_as_sterile__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Was_the_device_labelled_as_sterile__c</fullName>
        <description>Was the device labelled as sterile</description>
        <inlineHelpText>Was the device labelled as sterile</inlineHelpText>
        <label>Was the device labelled as sterile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>