unpackaged/main/default/objects/CMPL123CME__CVR__c/fields/CMPL123CME__Where_did_the_Incident_Occured__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Where_did_the_Incident_Occured__c</fullName>
        <description>whether the incident occurred inside or outside Canada</description>
        <inlineHelpText>Whether the incident occurred inside or outside Canada</inlineHelpText>
        <label>Where did the Incident Occured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>