unpackaged/main/default/objects/CMPL123CME__CVR__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>